# effis

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.new  README.md  Rocket.toml  docker-compose.yml  sqlx-data.json
.github/workflows/: ci.yml
migrations/: 20221128214127_files.sql
src/: cors.rs  main.rs  ratelimit.rs
src/models/: mod.rs
src/routes/: buckets.rs  index.rs  mod.rs  static_routes.rs  upload.rs
tests/: Eludris.toml  docker-compose.yml
